fix: overflow in mobile screens

--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
 html {
   font-size: 1.5rem;
 }
+
+#file {
+  width: 100%;
+}
+
+code,
+pre {
+  text-align: left;
+}
